# forager

./: .gitignore  LICENSE  Pipfile  README.md  interactive_index_demo.ipynb  requirements.txt  setup.py  setupbase.py
add_dataset/: .gitignore  README.md  clip_inference.py  ingest.py  ingest_labels.py  main.py  resnet_inference.py  utils.py
demos/: test.py
forager/: app.py
forager_embedding_server/: app.py  bgsplit_jobs.py  config.py  index_jobs.py  jobs_data.py  models.py  pyproject.toml
forager_fe/: package.json  runserver.sh
forager_fe/public/: index.html
forager_fe/src/: App.js  index.js
forager_fe/src/Components/: AppNavBar.js  Button.js  ClusterStatus.js  Footer.js  Select.js  Spinner.js  index.js
forager_fe/src/Constants/: colors.js  index.js
forager_fe/src/Pages/: index.js
forager_fe/src/Utils/: index.js  store.js  utils.js
forager_frontend/: app.py  package.json  pyproject.toml
forager_frontend/src/: App.js  DatasetList.js
forager_frontend/src/components/: AnnotatedImage.js  BulkTagModal.js  CaptionSearchPopover.js  ClusterModal.js  ImageStack.js  ModelManagementModal.js  ModelOutputManagementModal.js
forager_knn/: pyproject.toml
forager_server/: Pipfile  manage.py  pyproject.toml  requirements.txt  runserver.sh
forager_server/forager_server/: asgi.py  settings.py  urls.py  visualdb-3e97a435ebe6.json  wsgi.py
forager_server/forager_server/static/css/: main.css
forager_server/forager_server/templates/: base.html  head.html  header.html
forager_server/forager_server_api/: apps.py  models.py  signals.py  views.py
forager_server/forager_server_api/migrations/: 0001_initial.py
forager_server/klabelapp/: apps.py  forms.py  models.py  urls.py  views.py
forager_server/klabelapp/static/klabelapp/js/: kgrid.js  klabel.js  kmath.js
forager_server/klabelapp/static/klabelapp/js/widgets/: anim_thumb.js  lfviz.js
forager_server/klabelapp/templates/klabelapp/: dataset.html  index.html  klabel.html  new_dataset.html
forager_server/scripts/: README.md  change_negative_to_tombstone.py  change_not_X_to_X_negative.py  copy_tags.py  load_val.py  make_accuracy_graph.py  make_activity_graph.py  make_label_graph.py  make_plots.py  perf_migration_1.py  perf_migration_2.py  perf_migration_v1.py  rename_dataset.py
frontend/: dev_frontend.sh  devfrontend.sh  package.json  run_frontend.sh  runfrontend.sh
frontend/public/: index.html
frontend/src/: App.js  DatasetList.js  index.js
index_server/: bgsplit_jobs.py  config.py  deploy-containers.sh  index_jobs.py  models.py  pyproject.toml  run.py  utils.py
index_server/containers/adder/: Dockerfile  config.py  handler.py  requirements.txt
index_server/containers/bgsplit_mapper/: Dockerfile  handler.py  model.py  training_loop.py
index_server/containers/bgsplit_trainer/: config.py  dataset.py  main.py  model.py  requirements.txt  test.py  training_loop.py  util.py  warmup_scheduler.py
index_server/containers/clip-text-inference/: Dockerfile  config.py  handler.py  requirements.txt
index_server/containers/mapper/: Dockerfile  base.py  config.py  deploy.sh  handler.py  inference.py  requirements.txt
index_server/containers/resizer/: handler.py
index_server/containers/trainer/: Dockerfile  config.py  deploy.sh  main.py  requirements.txt
index_server/terraform/: adder.tf  bgsplit_mapper.tf  bgsplit_trainer.tf  bgsplit_trainer_tensorboard.tf  cluster.tf  filestore.tf  mapper.tf  resizer.tf  terraform.tfvars  trainer.tf
interactive_index/: README.md  __init__.py  config.py  index.py  index_config.yml  setup.py  utils.py
interactive_index/demos/: Pipfile  README.md  performance_tests.ipynb
interactive_index/interactive_index/: config.py  index.py  index_config.yml  utils.py
launcher/: main.py
mihir_run/: setup.py
mihir_run/demos/embedding-server/: Pipfile  README.md  config.py  deploy.sh  pyproject.toml  reducers.py  requirements.txt  run.py
mihir_run/demos/embedding-server/mapper/: base.py  config.py  handler.py
scripts/: batch_resize.sh  clip_inference.py  concat_embeddings.py  concat_labels.py  generate_distance_matrix.py  regenerate_distance_matrix.py  reorder_embeddings.py  resnet_inference.py  sample_inat.py
(+63 files in other folders)
