[tool.poetry]
name = "forager_embedding_server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "*"
sanic = "*"
scikit-learn = "*"
chest = "^0.2.3"
forager_knn = {path = "../forager_knn", develop = true}
forager_index = {path = "../forager_index", develop = true}
aiostream = "^0.4.1"
bidict = "^0.21.2"
scipy = "^1.6.0"
fastcluster = "==1.1.28"
torch = "^1.9"
clip = { url = "https://github.com/openAI/CLIP/tarball/8cad3a736a833bc4c9b4dd34ef12b52ec0e68856"}
detectron2 = { url = "https://github.com/facebookresearch/detectron2/tarball/v0.5"}
#gcloud-aio-storage = "^5.7.0"


[tool.poetry.dev-dependencies]
torch = "^1.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
